src/rendering/opengl/gl_rho.h

	typedef unsigned int GLenum;

	typedef unsigned int GLbitfield;

	typedef int GLint;

	typedef unsigned char GLubyte;

	typedef unsigned int GLuint;

	typedef int GLsizei;

	typedef char GLchar;

		typedef uint64_t GLuint64;

		typedef struct __GLsync *GLsync;
extern void (CODEGEN_FUNCPTR *_ptrc_glEnable)(GLenum);

#define glEnable _ptrc_glEnable
extern GLenum (CODEGEN_FUNCPTR *_ptrc_glGetError)();

#define glGetError _ptrc_glGetError
extern const GLubyte * (CODEGEN_FUNCPTR *_ptrc_glGetString)(GLenum);

#define glGetString _ptrc_glGetString
extern void (CODEGEN_FUNCPTR *_ptrc_glPolygonMode)(GLenum, GLenum);

#define glPolygonMode _ptrc_glPolygonMode
extern void (CODEGEN_FUNCPTR *_ptrc_glGenTextures)(GLsizei, GLuint *);

#define glGenTextures _ptrc_glGenTextures
extern void (CODEGEN_FUNCPTR *_ptrc_glGenBuffers)(GLsizei, GLuint *);

#define glGenBuffers _ptrc_glGenBuffers
extern void (CODEGEN_FUNCPTR *_ptrc_glEnableVertexAttribArray)(GLuint);

#define glEnableVertexAttribArray _ptrc_glEnableVertexAttribArray
extern GLint (CODEGEN_FUNCPTR *_ptrc_glGetAttribLocation)(GLuint, const GLchar *);
extern void (CODEGEN_FUNCPTR *_ptrc_glGetProgramInfoLog)(GLuint, GLsizei, GLsizei *, GLchar *);

#define glGetProgramInfoLog _ptrc_glGetProgramInfoLog
extern void (CODEGEN_FUNCPTR *_ptrc_glGetProgramiv)(GLuint, GLenum, GLint *);

#define glGetProgramiv _ptrc_glGetProgramiv
extern void (CODEGEN_FUNCPTR *_ptrc_glGetShaderInfoLog)(GLuint, GLsizei, GLsizei *, GLchar *);

#define glGetShaderInfoLog _ptrc_glGetShaderInfoLog
extern void (CODEGEN_FUNCPTR *_ptrc_glGetShaderiv)(GLuint, GLenum, GLint *);

#define glGetShaderiv _ptrc_glGetShaderiv
extern GLint (CODEGEN_FUNCPTR *_ptrc_glGetUniformLocation)(GLuint, const GLchar *);

#define glGetUniformLocation _ptrc_glGetUniformLocation
extern void (CODEGEN_FUNCPTR *_ptrc_glLinkProgram)(GLuint);

#define glLinkProgram _ptrc_glLinkProgram
extern GLenum (CODEGEN_FUNCPTR *_ptrc_glCheckFramebufferStatus)(GLenum);
extern void (CODEGEN_FUNCPTR *_ptrc_glGenVertexArrays)(GLsizei, GLuint *);

#define glGenVertexArrays _ptrc_glGenVertexArrays

#define glDrawArraysInstanced _ptrc_glDrawArraysInstanced

extern GLenum (CODEGEN_FUNCPTR *_ptrc_glClientWaitSync)(GLsync, GLbitfield, GLuint64);