src/rendering/opengl/gl.adb


   procedure Draw_Arrays_Instanced
     (Mode            : GLenum;
      First           : Int;
      Count           : Sizei;
      Primitive_Count : Sizei)
   is
      procedure Rho_GlDrawArraysInstanced
        (Mode            : GLenum;
         First           : Int;
         Count           : Sizei;
         Primitive_Count : Sizei);
      pragma Import (C, Rho_GlDrawArraysInstanced,
                     "Rho_glDrawArraysInstanced");
      Error : GLenum;
   begin
      if Debug_Active then
         Ada.Text_IO.Put_Line
           ("glDrawArraysInstanced: "
            & GL.Debug.Image (Mode)
            & First'Img
            & Count'Img
            & Primitive_Count'Img);
      end if;
      Rho_GlDrawArraysInstanced
        (Mode,
         First,
         Count,
         Primitive_Count);
      Error := Get_Error;
      if Error /= 0 then
         raise Program_Error with Error'Img;
      end if;
   end Draw_Arrays_Instanced;

   ------------
   -- Enable --
   ------------

   procedure Enable
     (Capability : GLenum)
   is
      type Lib_glEnable is access
        procedure
          (Capability : GLenum);
      pragma Convention (C, Lib_glEnable);
      glEnable : Lib_glEnable;
      pragma Import (C, glEnable,
                     "_ptrc_glEnable");
   begin
      glEnable
        (Capability);
      if Get_Error /= 0 then
         raise Program_Error;
      end if;
   end Enable;

   ------------------
   -- Enable_Debug --
   ------------------

   procedure Enable_Debug is
   begin
      Debug_Active := True;
   end Enable_Debug;

   -----------------------------------
   -- Enable_Vertex_Attribute_Array --
   -----------------------------------

   procedure Enable_Vertex_Attribute_Array
     (Index : Uint)
   is
      type Lib_glEnableVertexAttribArray is access
        procedure
          (Index : Uint);
      pragma Convention (C, Lib_glEnableVertexAttribArray);
      glEnableVertexAttribArray : Lib_glEnableVertexAttribArray;
      pragma Import (C, glEnableVertexAttribArray,
                     "_ptrc_glEnableVertexAttribArray");
   begin
      if Debug_Active then
         Ada.Text_IO.Put_Line
           ("glEnableVertexAttribArray: " & Index'Img);
      end if;
      glEnableVertexAttribArray
        (Index);
      if Get_Error /= 0 then
         raise Program_Error;
      end if;
   end Enable_Vertex_Attribute_Array;

   -----------------
   -- Gen_Buffers --
   -----------------

   procedure Gen_Buffers
     (Size    : Sizei;
      Buffers : access Uint)
   is
      type Lib_glGenBuffers is access
        procedure
          (Size    : Sizei;
           Buffers : access Uint);
      pragma Convention (C, Lib_glGenBuffers);
      glGenBuffers : Lib_glGenBuffers;
      pragma Import (C, glGenBuffers,
                     "_ptrc_glGenBuffers");
   begin
      glGenBuffers
        (Size,
         Buffers);

      if Debug_Active then
         Ada.Text_IO.Put_Line
           ("glGenBuffers" & Size'Img & " -> " & Buffers.all'Img);
      end if;
      if Get_Error /= 0 then
         raise Program_Error;
      end if;
   end Gen_Buffers;

   ------------------
   -- Gen_Textures --
   ------------------

   procedure Gen_Textures
     (Size     : Sizei;
      Textures : access Uint)
   is
      type Lib_glGenTextures is access
        procedure
          (Size     : Sizei;
           Textures : access Uint);
      pragma Convention (C, Lib_glGenTextures);
      glGenTextures : Lib_glGenTextures;
      pragma Import (C, glGenTextures,
                     "_ptrc_glGenTextures");
   begin
      glGenTextures
        (Size,
         Textures);
      if Get_Error /= 0 then
         raise Program_Error;
      end if;
   end Gen_Textures;

   -----------------------
   -- Gen_Vertex_Arrays --
   -----------------------

   procedure Gen_Vertex_Arrays
     (Size      : Sizei;
      Array_Ids : access Uint)
   is
      type Lib_glGenVertexArrays is access
        procedure
          (Size     : Sizei;
           Textures : access Uint);
      pragma Convention (C, Lib_glGenVertexArrays);
      glGenVertexArrays : Lib_glGenVertexArrays;
      pragma Import (C, glGenVertexArrays,
                     "_ptrc_glGenVertexArrays");
   begin
      glGenVertexArrays
        (Size,
         Array_Ids);

      if Debug_Active then
         Ada.Text_IO.Put_Line
           ("glGenVertexArrays" & Size'Img & " -> " & Array_Ids.all'Img);
      end if;

      if Get_Error /= 0 then
         raise Program_Error;
      end if;
   end Gen_Vertex_Arrays;

   ----------------------------
   -- Get_Attribute_Location --
   ----------------------------

   function Get_Attribute_Location
     (Program : Uint;
      Name    : String)
      return Int
   is
      type Lib_Proc is access
        function
          (Program : Uint;
           Name    : Interfaces.C.Strings.chars_ptr)
           return Int;
      pragma Convention (C, Lib_Proc);
      Proc : Lib_Proc;
      pragma Import (C, Proc,
                     "_ptrc_glGetAttribLocation");
      C_Name : Interfaces.C.Strings.chars_ptr :=
                 Interfaces.C.Strings.New_String (Name);
      Result : constant Int := Proc (Program, C_Name);
   begin
      Interfaces.C.Strings.Free (C_Name);
      return Result;
   end Get_Attribute_Location;

   ---------------
   -- Get_Error --
   ---------------

   function Get_Error
     return GLenum
   is
      type Lib_glGetError is access
        function
          return GLenum;
      pragma Convention (C, Lib_glGetError);
      glGetError : Lib_glGetError;
      pragma Import (C, glGetError,
                     "_ptrc_glGetError");
   begin
      return glGetError.all;
   end Get_Error;

   -----------------
   -- Get_Program --
   -----------------

   procedure Get_Program
     (Program : Uint;
      Pname   : GLenum;
      Params  : access Int)
   is
      type Lib_glGetProgramiv is access
        procedure
          (Program : Uint;
           Pname   : GLenum;
           Params  : access Int);
      pragma Convention (C, Lib_glGetProgramiv);
      glGetProgramiv : Lib_glGetProgramiv;
      pragma Import (C, glGetProgramiv,
                     "_ptrc_glGetProgramiv");
   begin
      glGetProgramiv
        (Program,
         Pname,
         Params);
      if Get_Error /= 0 then
         raise Program_Error;
      end if;
   end Get_Program;

   --------------------------
   -- Get_Program_Info_Log --
   --------------------------

   procedure Get_Program_Info_Log
     (Program    : Uint;
      Max_Length : Sizei;
      Length     : access Sizei;
      Info_Log   : Interfaces.C.Strings.chars_ptr)
   is
      type Lib_glGetProgramInfoLog is access
        procedure
          (Program    : Uint;
           Max_Length : Sizei;
           Length     : access Sizei;
           Info_Log   : Interfaces.C.Strings.chars_ptr);
      pragma Convention (C, Lib_glGetProgramInfoLog);
      glGetProgramInfoLog : Lib_glGetProgramInfoLog;
      pragma Import (C, glGetProgramInfoLog,
                     "_ptrc_glGetProgramInfoLog");
   begin
      glGetProgramInfoLog
        (Program,
         Max_Length,
         Length,
         Info_Log);
      if Get_Error /= 0 then
         raise Program_Error;
      end if;
   end Get_Program_Info_Log;

   ----------------
   -- Get_Shader --
   ----------------

   procedure Get_Shader
     (Shader : Uint;
      Pname  : GLenum;
      Params : access Int)
   is
      type Lib_glGetShaderiv is access
        procedure
          (Shader : Uint;
           Pname  : GLenum;
           Params : access Int);
      pragma Convention (C, Lib_glGetShaderiv);
      glGetShaderiv : Lib_glGetShaderiv;
      pragma Import (C, glGetShaderiv,
                     "_ptrc_glGetShaderiv");
   begin
      glGetShaderiv
        (Shader,
         Pname,
         Params);
      if Get_Error /= 0 then
         raise Program_Error;
      end if;
   end Get_Shader;

   -------------------------
   -- Get_Shader_Info_Log --
   -------------------------

   procedure Get_Shader_Info_Log
     (Shader     : Uint;
      Max_Length : Sizei;
      Length     : access Sizei;
      Info_Log   : Interfaces.C.Strings.chars_ptr)
   is
      type Lib_glGetShaderInfoLog is access
        procedure
          (Shader     : Uint;
           Max_Length : Sizei;
           Length     : access Sizei;
           Info_Log   : Interfaces.C.Strings.chars_ptr);
      pragma Convention (C, Lib_glGetShaderInfoLog);
      glGetShaderInfoLog : Lib_glGetShaderInfoLog;
      pragma Import (C, glGetShaderInfoLog,
                     "_ptrc_glGetShaderInfoLog");
      Error : GLenum;

   begin
      glGetShaderInfoLog
        (Shader,
         Max_Length,
         Length,
         Info_Log);
      Error := Get_Error;

      if Error /= 0 then
         raise Program_Error;
      end if;
   end Get_Shader_Info_Log;

   ----------------
   -- Get_String --
   ----------------

   function Get_String
     (Name : GLenum)
     return Interfaces.C.Strings.chars_ptr
   is
      type Lib_glGetString is access
        function
          (Name : GLenum)
          return Interfaces.C.Strings.chars_ptr;
      pragma Convention (C, Lib_glGetString);
      glGetString : Lib_glGetString;
      pragma Import (C, glGetString,
                     "_ptrc_glGetString");
   begin
      return glGetString
        (Name);
   end Get_String;

   --------------------------
   -- Get_Uniform_Location --
   --------------------------

   function Get_Uniform_Location
     (Program : Uint;
      Name    : Interfaces.C.Strings.chars_ptr)
     return Uint
   is
      type Lib_glGetUniformLocation is access
        function
          (Program : Uint;
           Name    : Interfaces.C.Strings.chars_ptr)
          return Uint;
      pragma Convention (C, Lib_glGetUniformLocation);
      glGetUniformLocation : Lib_glGetUniformLocation;
      pragma Import (C, glGetUniformLocation,
                     "_ptrc_glGetUniformLocation");
      Result : constant Uint :=
                 glGetUniformLocation
                   (Program,
                    Name);
   begin
      if Debug_Active then
         Ada.Text_IO.Put_Line
           ("glUniform" & Program'Img & " -> " & Result'Img);
      end if;

      return Result;

   end Get_Uniform_Location;

   ------------------
   -- Link_Program --
   ------------------

   procedure Link_Program
     (Program : Uint)
   is
      type Lib_glLinkProgram is access
        procedure
          (Program : Uint);
      pragma Convention (C, Lib_glLinkProgram);
      glLinkProgram : Lib_glLinkProgram;
      pragma Import (C, glLinkProgram,
                     "_ptrc_glLinkProgram");
   begin
      glLinkProgram
        (Program);
      if Get_Error /= 0 then
         raise Program_Error;
      end if;
   end Link_Program;

   ------------------
   -- Polygon_Mode --
   ------------------

   procedure Polygon_Mode
     (Face : GLenum;
      Mode : GLenum)
   is
      type Lib_glPolygonMode is access
        procedure
          (Face : GLenum;
           Mode : GLenum);
      pragma Convention (C, Lib_glPolygonMode);
      glPolygonMode : Lib_glPolygonMode;
      pragma Import (C, glPolygonMode,
                     "_ptrc_glPolygonMode");
      Error : GLenum;
   begin
      glPolygonMode
        (Face,
         Mode);
      Error := Get_Error;
      if Error /= 0 then
         raise Program_Error;
      end if;
   end Polygon_Mode;

   -------------------
   -- Shader_Source --
   -------------------

   procedure Shader_Source
     (Shader : Uint;
      Count  : Sizei;
      Source : String)
   is
      pragma Unreferenced (Count);

      procedure Rho_Shader_Source
        (Shader : Uint;
         Source : Interfaces.C.Strings.chars_ptr);

      pragma Import (C, Rho_Shader_Source, "Rho_shader_source");

      C_Source : Interfaces.C.Strings.chars_ptr :=
                   Interfaces.C.Strings.New_String (Source);
      Error : GLenum;
   begin

      Rho_Shader_Source (Shader, C_Source);
